kubernetes/django-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app.kubernetes.io/name: django_app
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: django_app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: django_app
    spec:
      containers:
      - name: django-app
        image: hell:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80

#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: django-app-service
#  labels:
#    app.kubernetes.io/name: django-app-service
#spec:
#  selector:
#    app.kubernetes.io/name: django_app
#  ports:
#    - name: app-listener
#      protocol: TCP
#      port: 80
#      targetPort: 80
#  type: NodePort
