kubernetes/ingress-hosts.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
  - host: www.star.test
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: django-app-service
              port:
                number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  labels:
    app.kubernetes.io/name: django_app
spec:
  selector:
    app.kubernetes.io/name: django_app
  ports:
    - name: app-listener
      protocol: TCP
      port: 80
      targetPort: 80
#  type: LoadBalancer
