kubernetes/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-deployment
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - max-k8s.site
    secretName: example-tls
  rules:
  - host: max-k8s.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-app-service2
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: django-app-service2
  labels:
    app.kubernetes.io/name: django_app
spec:
  selector:
    app.kubernetes.io/name: django_app
  ports:
    - name: app-listener
      protocol: TCP
      port: 80
      targetPort: 80
